worked more on the Mainpage and loginpage

--- a/src/www/Inloggning.html
+++ b/src/www/Inloggning.html
@@ -4,8 +4,8 @@
     <title>inloggning.html</title>
     <meta charset = "UTF-8" />
 </head>
+<h1 style="color:blue">Pim Particle</h1>
 <body>
-<h1>PIM Particles</h1>
 <form>
     <fieldset>
         <legend></legend>
