--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -14,6 +14,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.sidenav {
+    flex: 35%;
+  padding: 15px 0;
+}
+
 /* Style the side navigation */
 .sidenav {
   height: 100%;
@@ -22,7 +27,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: rgb(110, 134, 122);
   overflow-x: hidden;
 }
 
@@ -45,12 +50,27 @@ body {
 .content {
   margin-left: 20%;
   padding-left: 20px;
+ 
 }
+
+.header {
+    color: white;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+
+}
+
 </style>
 </head>
 <body>
 
+
 <div class="sidenav">
+    <div class ="header">
+        <h2>My notes</h2>
+    </div>
+   
   <a href="#">Frukost</a>
   <a href="#">Lunch</a>
   <a href="#">Middag</a>
