Sista ändring på frontend. Typ

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
+    <link rel="stylesheet" href="stylesheet.css">
     <title>inloggning.html</title>
     <meta charset = "UTF-8" />
 </head>
-<h1 style="color:blue">Pim Particle</h1>
+
+
+<h1 class="flex" align="center" style="color:black;">Welcome to BlackHat Notes</h1>
 <body>
-<form>
-    <fieldset>
-        <legend></legend>
-        <p>
+      
+    <p align ="center">
             <label>Enter Username</label>
             <input type = "text"
                    id = "Username"
                    onfocus="this.value=''"
                    value = "Enter the Username" />
-
         </p>
 
 
-        <button type="LoginButton">log In</button>
-        <button type="CreateButton">Register</button>
+    <div class="flex-container">
+        <div><button type="LogIn">log In</button></div>
+        <div><button type="Register">Register</button></div>
+         
 
-    </fieldset>
-</form>
 </body>
 </html>
