--- a/src/www/MainPage.html
+++ b/src/www/MainPage.html
@@ -1,68 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-.vl {
-  border-left: 6px solid green;
-  height: 500px;
-  position: absolute;
-  left: 30%;
-  margin-left: -3px;
-  top: 0;
-}
-</style>
-    <style>
-
-#customers {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 30%;
-}
-
-#customers td, #customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #00BFFF;
-  color: white;
-}
-
-
-</style>
+  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>Blackhat notes12</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <div class="sidenav">
+      <div class ="header">
+          <h2>My notes</h2>
+      </div>
+    
+    <a href="#">Frukost</a>
+    <a href="#">Lunch</a>
+    <a href="#">Middag</a>
+  </div>
 
-<table id="customers">
-    <tr>
-        <th>Title</th>
-
-    </tr>
-    <tr>
-        <td></td>
-
-    </tr>
-    <tr>
-        <td></td>
-
-    </tr>
-    <tr>
-        <td></td>
-
-    </tr>
-
-</table>
-
-<div class="vl"></div>
+  <div id="note-main-grid">
+    <div class="note-header">
+      A note
+    </div>
+    <div id="editor">
+      <input type="text" value="Hello">
+    </div>
+    <div id="buttons">
+      <button class="button button2" style="font-size:16px">Save<div class="fa fa-save"> </div></button>
+      <button class="button button2"  style="font-size:16px">Reset<i class="fa fa-refresh"> </i></button>
+    </div>
+  </div>
 
 </body>
-</html>
