färdig med Index och nästan färdig med MainPage

--- a/src/www/MainPage.html
+++ b/src/www/MainPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="stylesheetMainPage.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Blackhat notes12</title>
 <meta charset="utf-8">
@@ -23,9 +23,12 @@
       A note
     </div>
     <div id="editor">
-      <input type="text" value="Hello">
+    
+      <textarea rows="30%" cols="135.9%">
+        
+        </textarea>
     </div>
-    <div id="buttons">
+    <div style="text-align: right;">
       <button class="button button2" style="font-size:16px">Save<div class="fa fa-save"> </div></button>
       <button class="button button2"  style="font-size:16px">Reset<i class="fa fa-refresh"> </i></button>
     </div>
