--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,28 +1,27 @@
-<!DOCTYPE HTML>
-<html lang = "en">
+<!DOCTYPE html>
+<html>
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
-    <title>inloggning.html</title>
-    <meta charset = "UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="stylesheetindex.css">
 </head>
-
-
-<h1 class="flex" align="center" style="color:black;">Welcome to BlackHat Notes</h1>
 <body>
-      
-    <p align ="center">
-            <label>Enter Username</label>
-            <input type = "text"
-                   id = "Username"
-                   onfocus="this.value=''"
-                   value = "Enter the Username" />
-        </p>
+
+<h2 style="text-align: center;">Welcome to BlackHat Notes</h2>
+
+  <div class="container", style="text-align: center;">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="username" required style="text-align: center;"> 
+  </div>
+
+  
+  
+<div style="text-align: center;">
+      <button class="button button2 " style="text-align: center;">Log in</button>
+      <button class="button button2"  style="text-align: center;">Register</button>
+    </div>
 
 
-    <div class="flex-container">
-        <div><button type="LogIn">log In</button></div>
-        <div><button type="Register">Register</button></div>
-         
+</form>
 
 </body>
 </html>
