Fixed the post/put methods
Gjorde så att vi kan uppdatera (med knapp) samt skapa nya (dock ingen knapp för det, men har testat att det funkar) notes

--- a/src/www_quilltest/index.html
+++ b/src/www_quilltest/index.html
@@ -10,6 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="stylesheet.css">
         <script src="script.js" defer></script>
+
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Roboto&display=swap" rel="stylesheet">
     </head>
     <header>
         <button onclick="getNotesForLoggedUser()">Click me for notes for user</button>
@@ -22,6 +24,9 @@
                 <div id="editor">
             </div>
             </ul>
+        </div>
+        <div>
+            <button id="save" onclick="saveNote()">SAVE</button>
         </div>
     </body>
     
