--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+	<!-- Include the Quill library -->
+	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+	<script src="mainPageScript.js" defer></script>
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Blackhat notes12</title>
@@ -13,20 +18,18 @@
 		<div id="sidenav">
 
 			<h2 class="nav-header">My notes</h2>
+			<div id="para"></div>
 
-			<a href="#">Frukost</a>
-			<a href="#">Lunch</a>
-			<a href="#">Middag</a>
 		</div>
 
 		<div id="note-main-grid">
 			<div class="note-header">A note</div>
 
-			<textarea id="editor"></textarea>
+			<div id="editor"></div>
 
 			<div id="buttons-container">
 				<button class="standard-button">
-					Save<div class="fa fa-save"></div>
+					Save<div class="fa fa-save" onclick="getNotesForLoggedUser()""></div>
 				</button>
 				<button class="standard-button">
 					Reset<div class="fa fa-refresh"></div>
