Philips och Martins arbete mergat

--- a/src/www/MainPage.html
+++ b/src/www/MainPage.html
@@ -19,9 +19,7 @@
       <div class ="header">
           <h2>My notes</h2>
       </div>
-    <div id="para">
-
-    </div>
+    <div id="para"></div>
   </div>
 
   <div id="note-main-grid">
