--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -4,7 +4,7 @@
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<!-- Include the Quill library -->
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-	<script src="mainPageScript.js" defer></script>
+	<script src="notes-script.js" defer></script>
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Blackhat notes12</title>
