--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -30,7 +30,7 @@
 			</div>
 
 			<div id="buttons-container">
-				<button class="standard-button" onclick="getNotesForLoggedUser()">
+				<button class="standard-button" onclick="updateNote()">
 					Save<div class="fa fa-save"></div>
 				</button>
 				<button class="standard-button">
