--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -21,8 +21,8 @@
 
 		</div>
 
-		<div id="note-main-grid">
-			<div class="note-header">A note</div>
+		<div id="note-main-grid"> 
+			<div contenteditable="true" class="note-header">A note</div> <!-- Made div editable/Robin -->
 
 			<div id="quill">
 				<div id="editor-toolbar"></div>
@@ -30,7 +30,7 @@
 			</div>
 
 			<div id="buttons-container">
-				<button class="standard-button" onclick="getNotesForLoggedUser()">
+				<button class="standard-button" onclick="updateNote()">
 					Save<div class="fa fa-save"></div>
 				</button>
 				<button class="standard-button">
