Added focus on notes page
Also "fixed" the color scheme

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="login-textfield" placeholder="Username">
   
         <div id="login-buttons">
-          <button class="standard-button hover-shadow" onclick="login()">Log in</button>
+          <button id="login1" class="standard-button hover-shadow" onclick="login()">Log in</button>
           <button class="standard-button hover-shadow" onclick="register()">Register</button>
         </div>
   
