Fixed merge errors

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -37,9 +37,10 @@
 
 		<div id="note-main-grid">
 		<div id="note-main-grid"> 
-			<div contenteditable="true" class="note-header">A note</div> <!-- Made div editable/Robin -->
+			 <!-- Made div editable/Robin -->
 
-			<div id="note-header-grid"><h1 class="note-header"> A note</h1>
+			<div id="note-header-grid">
+				<div contenteditable="true" class="note-header">A note</div>
 				<button class="standard-button">Logout</button>
 			</div>
 
