Login+Enter, Logout

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -36,7 +36,11 @@
 				<button class="standard-button">
 					Reset<div class="fa fa-refresh"></div>
 				</button>
+				<button id ="logout-button" class="standard-button" onclick="window.open('index.html', '_self');">
+					<span class="icon">Logout</span>
+			   </button>
 			</div>
+		
 
 		</div>
 
