--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -5,7 +5,6 @@
 	<!-- Include the Quill library -->
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 	<script src="notes-script.js" defer></script>
-	<script src="https://kit.fontawesome.com/yourcode.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,20 +28,9 @@
 			</div>
 			</div>
 
-
-
-
-
-
-
 		<div id="note-main-grid">
 		<div id="note-main-grid"> 
-			 <!-- Made div editable/Robin -->
-
-			<div id="note-header-grid">
-				<div contenteditable="true" class="note-header">A note</div>
-				<button class="standard-button">Logout</button>
-			</div>
+			<div contenteditable="true" class="note-header">A note</div>
 
 			<div id="quill">
 				<div id="editor-toolbar"></div>
@@ -56,9 +44,7 @@
 				<button class="standard-button" onclick="resetNote()">
 					Reset<div class="fa fa-refresh"></div>
 				</button>
-				<button id ="logout-button" class="standard-button" onclick="window.open('index.html', '_self');">
-					<span class="icon">Logout</span>
-			   </button>
+				<button class="standard-button" id="logout-button" onclick="window.open('index.html', '_self');">Logout</button>
 			</div>
 		
 
