Delete button fixed

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -23,7 +23,7 @@
 			<h2 class="nav-header">My notes</h2>
 			<div id="para"></div>
 			<div class="add-delete-container"> 
-				<button class="special-round-button fas fa-trash-alt"></button> 
+				<button class="special-round-button fas fa-trash-alt" onclick="deleteNote()"></button> 
 				<button class="special-round-button  fas fa-plus-circle"></button>
 			</div>
 			</div>
