Added delete and new note functions

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -24,7 +24,7 @@
 			<div id="para"></div>
 			<div class="add-delete-container"> 
 				<button class="special-round-button fas fa-trash-alt" onclick="deleteNote()"></button> 
-				<button class="special-round-button  fas fa-plus-circle"></button>
+				<button class="special-round-button  fas fa-plus-circle" onclick="createNewNote()"></button>
 			</div>
 			</div>
 
