Kan lägga till bilder via länk

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -30,7 +30,8 @@
 
 		<div id="note-main-grid">
 		<div id="note-main-grid"> 
-			<div contenteditable="true" class="note-header">A note</div>
+			<div contenteditable="true" class="note-header">A note
+				<button class="standard-button" id="logout-button" onclick="window.open('index.html', '_self');">Logout</button></div>
 
 			<div id="quill">
 				<div id="editor-toolbar"></div>
@@ -44,7 +45,6 @@
 				<button class="standard-button" onclick="resetNote()">
 					Reset<div class="fa fa-refresh"></div>
 				</button>
-				<button class="standard-button" id="logout-button" onclick="window.open('index.html', '_self');">Logout</button>
 			</div>
 		
 
