Finade till det lite, mest för skojs skull

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -30,8 +30,10 @@
 
 		<div id="note-main-grid">
 		<div id="note-main-grid"> 
-			<div contenteditable="true" class="note-header">A note
-				<button class="standard-button" id="logout-button" onclick="window.open('index.html', '_self');">Logout</button></div>
+			<div class="top-header">
+				<div contenteditable="true" class="note-header">A note</div>
+				<button class="standard-button" id="logout-button" onclick="window.open('index.html', '_self');">Logout</button>
+			</div>
 
 			<div id="quill">
 				<div id="editor-toolbar"></div>
