Fixade så att Quill ser bra ut!

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -22,13 +22,14 @@
 		</div>
 
 		<div id="note-main-grid">
+
 			<div class="note-header">A note</div>
 
-			<div id="quill">
-				<div id="editor-toolbar"></div>
-				<div id="editor"></div>
+			<div id="quill-container">
+				<div id="quill-editor">
+				</div>
 			</div>
-
+			
 			<div id="buttons-container">
 				<button class="standard-button" onclick="saveNote()">
 					Save<div class="fa fa-save"></div>
