Nytt dark mode - i guess

--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<!-- Include the Quill library -->
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
@@ -41,12 +42,7 @@
 			</div>
 
 			<div id="buttons-container">
-				<button class="standard-button" onclick="saveNote()">
-					Save<div class="fa fa-save"></div>
-				</button>
-				<button class="standard-button" onclick="resetNote()">
-					Reset<div class="fa fa-refresh"></div>
-				</button>
+				
 			</div>
 		
 
