--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -27,7 +27,7 @@
 				<button class="special-round-button fas fa-trash-alt" onclick="deleteNote()"></button> 
 				<button class="special-round-button  fas fa-plus-circle" onclick="createNewNote()"></button>
 			</div>
-			</div>
+		</div>
 
 		<div id="note-main-grid">
 			<div class="top-header">
@@ -40,9 +40,7 @@
 				</div>
 			</div>
 			
-			<div id="buttons-container">
-				
-			</div>
+			<div id="buttons-container"></div>
 		
 
 		</div>
