--- a/src/www/notes.html
+++ b/src/www/notes.html
@@ -36,10 +36,57 @@
 			</div>
 
 			<div id="quill-container">
-				<div id="quill-editor">
-				</div>
+				<div id="toolbar-container">
+					<span class="ql-formats">
+					  	<select class="ql-font"></select>
+					  	<select class="ql-size"></select>
+					</span>
+					<span class="ql-formats">
+					 	<button class="ql-bold"></button>
+					 	<button class="ql-italic"></button>
+					 	<button class="ql-underline"></button>
+					 	<button class="ql-strike"></button>
+					</span>
+					<span class="ql-formats">
+					  	<select class="ql-color"></select>
+					  	<select class="ql-background"></select>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-script" value="sub"></button>
+					  	<button class="ql-script" value="super"></button>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-header" value="1"></button>
+					  	<button class="ql-header" value="2"></button>
+					  	<button class="ql-blockquote"></button>
+					  	<button class="ql-code-block"></button>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-list" value="ordered"></button>
+					  	<button class="ql-list" value="bullet"></button>
+					  	<button class="ql-indent" value="-1"></button>
+					  	<button class="ql-indent" value="+1"></button>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-direction" value="rtl"></button>
+					  	<select class="ql-align"></select>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-link"></button>
+					  	<button class="ql-image"></button>
+					  	<button class="ql-video"></button>
+					  	<button class="ql-formula"></button>
+					</span>
+					<span class="ql-formats">
+					  	<button class="ql-clean"></button>
+					</span>
+					<span class="ql-formats">
+						<button id="attach-file-button" class="fas fa-paperclip"></button>
+					</span>
+				  </div>
+				  <div id="quill-editor"></div>
 			</div>
-			
+
 			<div id="buttons-container"></div>
 		
 
