--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="login-script.js" defer></script>
   </head>
